# libmks-rs

./: .gitignore  BUILD_SUCCESS_STATUS.md  CLAUDE.md  COMPILATION_SUMMARY.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LOOPBACK.md  POINTER_LOCK_STATUS.md  README.md  TODO.md  WAYLAND_FIX_PLAN.md  rustfmt.toml
docs/: FETCH_THEN_UPDATE_OPTIMIZATION.md  MOUSE_CLAMPING.md  MOUSE_EVENT_CONFLATION.md  QEMUEVENT_DEBUG_OPTIMIZATION.md  REFACTORING_SUMMARY.md  RESIZE_DEBOUNCING.md
examples/: qemu_display.rs  scaling_mode_demo.rs  swapchain.rs  vm_display.rs  vm_display_interactive.rs  vm_display_with_input.rs
src/: dbus.rs  display.rs  error.rs  keymaps.rs  lib.rs  log.rs
src/dbus/: console.rs  keyboard.rs  listener.rs  mouse.rs  multitouch.rs  utils.rs  vm.rs
src/display/: capture-hint.css  capture_state.rs  coord.rs  coordinate.rs  crop.rs  direct_map.rs  display_state.rs  dmabuf.rs  error.rs  framebuffer.rs  gpu_passthrough.rs  input_daemon.rs  input_event_bus.rs  input_event_controller.rs  input_handler.rs  memmap.rs  monitor_metrics.rs  pixman_4cc.rs  screen.rs  software_rasterizer.rs  udma.rs  viewport_transform.rs  vm-display.css  vm_display.rs  wayland_confine.rs  wayland_lock.rs
src/display/udma/: utils.rs
test_suit/: run_qemu_display.sh  start-livecd.sh
